--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -52,11 +52,12 @@ h1 {
 
 
 .btn {
-    background-color: #192a56;
+    background-color: #00d1b2;
     border-radius: 5px;
     color: #FFF;
     display: block;
     padding: 10px;
+    margin: 5px;
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
@@ -66,6 +67,14 @@ h1 {
 }
 
 .btn:hover {
+  box-shadow: 0 5px 10px rgba(0,0,0,.3);
+  transform: translateY(-2px);
+}
+
+.cart-button{
+  margin-right: 10px;
+}
+.button:hover{
   box-shadow: 0 5px 10px rgba(0,0,0,.3);
   transform: translateY(-2px);
 }
