--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,7 +1,9 @@
 {{!-- Archivo: cart.handlebars --}}
-{{#if isAdmin}}
+{{#if isUser}}
   <div class="container">
-    <h2>Carrito de compras</h2>
+    <div class="is-flex is-justify-content-center	">
+      <h1 class="title is-3">Carrito</h1>
+    </div>
     {{#each cart.products}}
       <div class="cart-item">
         <figure>
@@ -19,4 +21,7 @@
   </div>
 {{else}}
   <p>No tienes permisos para ver el carrito de compras</p>
+{{/if}}
+{{#if error}}
+<h3 class="title is-5">{{error}}</h3>
 {{/if}}
