--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,6 +1,5 @@
 <div>
-  <h1>¡Hola, {{user.name}}! ¡Qué gusto verte!</h1>
-  {{#if isAdmin}}
+  {{#if isUser}}
     <div class="container">
       {{#each products}}
           <div class="card">
