Cart bug fixed and clear cart button included

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -19,6 +19,9 @@
       </div>
     {{/each}}
   </div>
+  <div class="is-flex is-justify-content-center	">
+    <a href="#" class="button is-danger clean-cart" data-product-id="{{this._id}}">Vaciar carrito</a>
+  </div>
 {{else}}
   <p>No tienes permisos para ver el carrito de compras</p>
 {{/if}}
