bcrypt, passport-local and -github implemented

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -29,8 +29,11 @@
         Login
       </button>
     </p>
+  </div>
+  <h6 class="subtitle is-6">
+    <a href="/api/github">Login with Github</a>
+  </h6>
   {{#if error}}
   <h3 class="title is-5">{{error}}</h3>
   {{/if}}
-  </div>
 </div>  
