Mailing and SMS

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,6 +58,11 @@
           Current view
         </a>
         {{/if}}
+        {{#if isAdmin}}
+          <a class="navbar-item" href="http://localhost:8080/managment">
+            Gestor de Productos
+          </a>
+        {{/if}}
       </div>
     </div>
       <div class="navbar-end">
