--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,6 +57,9 @@
         <a class="navbar-item" href="http://localhost:8080/api/sessions/current">
           Current view
         </a>
+        <a class="navbar-item" href="http://localhost:8080/usermanagment">
+          Gestion de Usuarios
+        </a>
         {{/if}}
         {{#if isAdmin}}
           <a class="navbar-item" href="http://localhost:8080/managment">
